# oldphilly

./: .gitignore  README.md  justfile  main.py  pyproject.toml  spec.md
.github/workflows/: deploy.yml
docs/: search_parameters.md
notebooks/: sql_explorer.py
notebooks/__marimo__/session/: sql_explorer.py.json
oldphilly/: __init__.py  api_models.py  config.py  crawler.py  db.py  export.py  http.py  maintenance.py  models.py  parse_detail.py  parse_search.py
oldphilly/crawlers/: __init__.py
oldphilly/crawlers/phillyhistory/: __init__.py  api_models.py  crawler.py  http.py  maintenance.py  parse_detail.py  parse_search.py
scripts/: crawl.py  export_jsonl.py  export_release.py  generate_site_data.py  install_datasette_views.py  requeue_failed.py  scan_asset_ids.py  status.py
site/: about.html  app.js  index.html  style.css
tests/: test_models.py  test_parse_detail.py  test_parse_search.py
tests/fixtures/: detail_api_sample.json  detail_hires_api_sample.json  detail_sample.html  search_api_sample.json  search_sample.html
