[project]
name = "oldphilly"
version = "0.1.0"
description = "A minimal local PhillyHistory metadata crawler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "marimo>=0.23.8",
    "polars[pyarrow]>=1.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".agents", ".codex"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty]
src = { include = ["oldphilly/", "scripts/"] }

[tool.ty.analysis]
replace-imports-with-any = ["sqlalchemy.**", "bs4.**"]
